<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFE"
    android:backgroundTint="#FDFDFE"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/metrologo"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />

    <Spinner
        android:id="@+id/startStation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/arrivalStation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/arrival"
        app:layout_constraintEnd_toEndOf="@+id/startStation"
        app:layout_constraintStart_toStartOf="@+id/startStation"
        app:layout_constraintTop_toBottomOf="@+id/startStation" />

    <TextView
        android:id="@+id/stationNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getDetails"
        tools:text="STATIONNO" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/stationNo"
        app:layout_constraintTop_toTopOf="@+id/stationNo"
        tools:text="TIME" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time"
        tools:text="PRICE" />

    <Button
        android:id="@+id/getDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#A6433D"
        android:onClick="getDetails"
        android:text="@string/get_details"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/arrivalStation"
        app:layout_constraintStart_toStartOf="@+id/arrivalStation"
        app:layout_constraintTop_toBottomOf="@+id/arrivalStation" />

    <TextView
        android:id="@+id/direction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stationNo"
        tools:text="DIRECTION" />

    <TextView
        android:id="@+id/station"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/direction"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/direction"
        app:layout_constraintTop_toBottomOf="@+id/direction"
        tools:text="STATIONS" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:fontFamily="@font/allerta"
        android:text="@string/enter_your_trip"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#A5433D"
        android:enabled="false"
        android:onClick="next"
        android:text="@string/next_path"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/shortestPath"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/perviousPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#A6433D"
        android:enabled="false"
        android:onClick="pervious"
        android:text="@string/pervious_path"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shortestPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#A6433D"
        android:enabled="false"
        android:onClick="shortest"
        android:text="@string/shortest_path"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/perviousPath"
        app:layout_constraintEnd_toStartOf="@+id/nextPath"
        app:layout_constraintStart_toEndOf="@+id/perviousPath" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/allerta"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#53483A"
        app:layout_constraintBottom_toTopOf="@+id/shortestPath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="count" />
</androidx.constraintlayout.widget.ConstraintLayout>